--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,16 @@ repositories {
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.4.7'
     compile 'org.codehaus.groovy.modules.http-builder:http-builder:0.7.1'
+}
 
-    testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
-    testCompile 'junit:junit:4.12'
+jar {
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+
+    manifest {
+        attributes(
+                'Main-Class': 'MessageRemover'
+        )
+    }
 }
